# esports-bench

./: .env-template  .gitignore  CITATION.cff  debug.py  pyproject.toml  readme.md  setup.cfg
esportsbench/: arg_parsers.py  constants.py  datasets.py  utils.py
esportsbench/data_pipeline/: call_of_duty.py  compare_data_from_hf.py  counterstrike.py  data_pipeline.py  debug.py  debug_schema.py  dota2.py  eafc.py  fifa.py  fighting_games.py  get_data.py  get_data_from_hf.py  get_data_from_source.py  halo.py  league_of_legends.py  overwatch.py  postprocess.py  push_to_hf_hub.py  rainbow_six.py  rainbox_six.py  rocket_league.py  smash_melee.py  smash_ultimate.py  snapshot.py  starcraft1.py  starcraft2.py  tetris.py  upload_datasets.py  valorant.py  warcraft3.py
esportsbench/eval/: analyze_sweep.py  bench.py  diff_results.json  diff_table.py  experiment_config.py  latex_table.txt  new_results.json  original_results.json  rating_experiment.py  sweep.py  sweep_config.py
esportsbench/experiments/: analyze_rating_period.py  broad_sweep.py  experiment_1.py  experiment_2.py  fine_sweep.py  forecast.py  forecast_results.txt  rating_experiment.py  worlds_2024.py
esportsbench/experiments/conf/: config.yaml  param_bounds.yaml  rating_period_ablation.yaml  trueskill_time_dynamics.yaml
esportsbench/experiments/conf/broad_sweep_config/: default.yaml  trueskill_time_dynamics.yaml
esportsbench/experiments/conf/sweep_config/: broad.yaml
esportsbench/experiments/configs/: broad_sweep_config.yaml  param_bounds.yaml  sweep_config.yaml
(+3288 files in other folders)
