[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "esportsbench"
version = "0.0.1"
description = "esports datasets for benchmarking rating systems"
authors = [
    {name="Clayton Thorrez", email="claytonthorrez@gmail.com"},
]
dependencies = [
    "requests",
    "requests-cache",
    "python-dotenv",
    "numpy",
    "scipy",
    "polars==0.20.4",
    "pandas", # :/,
    "pyyaml",
    "dacite",
    "matplotlib",
    "datasets",
    "hydra-core",
    "riix==0.0.6"
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
